framec_tests/language_specific/python/v3_systems/positive/if_forward_exec.frm
@target python
# @run-expect: FORWARD:PARENT

system S {
    machine:
        $A => $P {
            e() {
                if True:
                    => $^
            }
        }
        $P { }
}

