framec_tests/language_specific/python/v3_systems/negative/system_blocks_out_of_order.frm
@target python

# System blocks intentionally out of order: machine: appears before interface:.
# Expect a semantic error (E113) from the outer grammar validator.

system S {
    machine:
        $A {
            e() { x() }
        }
    interface:
        e()
}

